# init_for_lib

./: .gitignore  CMakeLists.txt  README.md  project_tag_auth
examples/: CMakeLists.txt
examples/example_hello/: CMakeLists.txt  example_hello.cpp
include/init_for_lib/hello/: hello.h  hello.hpp
src/: CMakeLists.txt
src/hello/: CMakeLists.txt  hello.cpp
tests/: CMakeLists.txt
tests/test_hello/: CMakeLists.txt  test_hello.cpp
